add auth preferences
masih bug di history

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="checked">checked</string>
     <string name="unchecked">unchecked</string>
 
+
+    <string name="title">Keluar</string>
+    <string name="dialogMsg">Kamu yakin ingin keluar ? </string>
+
 </resources>
